# project-ult-data-platform

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  Makefile  README.md  constraints.txt  pyproject.toml
.github/workflows/: ci.yml
artifacts/frontend-api/: cycles.json
artifacts/frontend-api/data/canonical/: stock_basic.json
artifacts/frontend-api/data/raw/: tushare_stock_basic.json
artifacts/frontend-api/formal/official_alpha_pool/: latest.json
artifacts/frontend-api/formal/recommendation_snapshot/: latest.json
artifacts/frontend-api/formal/world_state_snapshot/: latest.json
artifacts/frontend-api/manifests/: latest.json
docs/: PROGRESS.md  TASK_BREAKDOWN.md  data-platform.project-doc.md  raw-zone.md
docs/evidence/: holdings-backfill-derivation-evidence-20260506.md  holdings-live-backfill-producer-input-proof-20260507-attempt2.md  holdings-live-backfill-producer-input-proof-20260507.md  holdings-live-smoke-20260506.md
docs/ops/: canonical-schema-evolution.md
docs/runbook/: external-smoke-tushare-corpus.md  holdings-queue-freeze-rollout.md  iceberg-catalog.md
docs/spike/: iceberg-write-chain.md
scripts/: bootstrap_dev.sh  canonical_backfill.py  check_raw_zone.py  check_repository_artifacts.py  corpus_backed_raw_zone_probe.py  daily_refresh.sh  dbt.sh  external_smoke_tushare_corpus.py  external_smoke_tushare_corpus.sh  holdings_backfill.py  init_iceberg_catalog.py  live_tushare_bounded_raw_probe.py  mini_cycle_runtime_bootstrap.py  real_data_mini_cycle_probe.py  smoke_p1a.sh  smoke_p1c.sh
src/data_platform/: __init__.py  assets.py  contracts_compat.py  daily_refresh.py  formal_registry.py  holdings_backfill.py  public.py
src/data_platform/adapters/: README.md  __init__.py  base.py
src/data_platform/adapters/tushare/: __init__.py  adapter.py  assets.py
src/data_platform/config/: __init__.py  settings.py
src/data_platform/cycle/: README.md  __init__.py  current_cycle_inputs.py  current_selection.py  freeze.py  graph_phase1_adapters.py  manifest.py  models.py  recommendation_provenance.py  repository.py
src/data_platform/dbt/: README.md  __init__.py  dbt_project.yml  profiles.yml.example
src/data_platform/ddl/: README.md  __init__.py  iceberg_tables.py  runner.py
src/data_platform/provider_catalog/: __init__.py  registry.py  tushare_available_interfaces.csv
src/data_platform/queue/: README.md  __init__.py  api.py  models.py  repository.py  validation.py  worker.py
src/data_platform/raw/: README.md  __init__.py  health.py  writer.py
src/data_platform/serving/: README.md  __init__.py  canonical_datasets.py  canonical_writer.py  catalog.py  formal.py  reader.py  schema_evolution.py
src/data_platform/smoke/: __init__.py  p1c.py
tests/: __init__.py  _graph_promotion_fakes.py  conftest.py  test_assets.py  test_config.py  test_contract_alignment.py  test_repository_artifact_guard.py  test_smoke.py
tests/adapters/: test_base.py  test_tushare.py  test_tushare_events.py  test_tushare_financials.py  test_tushare_forecast.py  test_tushare_holdings.py  test_tushare_market_data.py  test_tushare_reference_data.py
tests/boundary/: test_red_lines.py
tests/config/: test_settings.py
tests/contract/: test_contracts_alignment.py  test_frontend_api_artifacts.py  test_public_api_contract.py
tests/cycle/: test_current_cycle_inputs.py  test_current_cycle_inputs_lineage_absent.py  test_current_selection.py  test_cycle_metadata.py  test_freeze_cycle_candidates.py  test_freeze_performance.py  test_graph_phase1_adapters.py  test_holdings_ex3_queue_freeze_bridge.py  test_publish_manifest.py
tests/dbt/: test_dbt_skeleton.py  test_dbt_test_coverage.py  test_dbt_wrapper.py  test_holdings_derivation_marts.py  test_intermediate_models.py  test_marts_models.py  test_marts_provider_neutrality.py  test_tushare_local_fixtures.py  test_tushare_staging_models.py
tests/ddl/: test_canonical_provider_neutrality.py  test_iceberg_tables.py  test_runner.py
tests/integration/: test_daily_refresh.py  test_iceberg_canonical_graph_writer_live.py  test_p1a_smoke.py  test_p1c_smoke.py  test_real_data_mini_cycle_probe.py
tests/provider_catalog/: test_no_source_leak.py  test_provider_catalog.py
tests/queue/: test_candidate_queue_schema.py  test_submit_candidate.py  test_worker.py
tests/raw/: test_health.py  test_writer.py
tests/regression/: test_with_shared_fixtures.py
tests/scripts/: test_corpus_backed_raw_zone_probe.py  test_live_tushare_bounded_raw_probe.py  test_mini_cycle_runtime_bootstrap.py
tests/serving/: test_canonical_datasets.py  test_canonical_datasets_v2_cutover.py  test_canonical_writer.py  test_canonical_writer_provider_neutrality.py  test_catalog.py  test_formal.py  test_formal_manifest_consistency.py  test_formal_no_source_leak.py  test_reader.py  test_schema_evolution.py
tests/smoke/: test_public_smoke.py
tests/spike/: test_iceberg_publish_manifest_chain.py  test_iceberg_write_chain.py
tests/unit/: test_holdings_backfill.py  test_public_entrypoints.py
(+110 files in other folders)
